--- a/src/app/seed-app.html
+++ b/src/app/seed-app.html
@@ -1,25 +1,64 @@
-<h3>
-  Angular 2 Seed
-</h3>
-<nav>
-	<a [routerLink]=" ['/Home'] ">
-    Home
-  </a>
-  |
-	<a [routerLink]=" ['/About'] ">
-    About
-  </a>
-  |
-	<a [routerLink]=" ['/RepoBrowser/RepoList', {org: 'angular'}] ">
-    Github Repos
-  </a>
-</nav>
+<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+  <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+    <div class="mdl-layout__header-row">
+      <span class="mdl-layout-title">Sistema de Inventario</span>
+      <div class="mdl-layout-spacer"></div>
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+        <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+          <i class="material-icons">search</i>
+        </label>
+        <div class="mdl-textfield__expandable-holder">
+          <input class="mdl-textfield__input" type="text" id="search">
+          <label class="mdl-textfield__label" for="search">Enter your query...</label>
+        </div>
+      </div>
+      <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
+        <i class="material-icons">more_vert</i>
+      </button>
+      <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
+        <li class="mdl-menu__item">About</li>
+        <li class="mdl-menu__item">Contact</li>
+        <li class="mdl-menu__item">Legal information</li>
+      </ul>
+    </div>
+  </header>
+  <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+    <header class="demo-drawer-header">
+      <img src="img/user.jpg" class="demo-avatar">
+      <div class="demo-avatar-dropdown">
+        <span>hello@example.com</span>
+        <div class="mdl-layout-spacer"></div>
+        <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+          <i class="material-icons" role="presentation">arrow_drop_down</i>
+          <span class="visuallyhidden">Accounts</span>
+        </button>
+        <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
+          <li class="mdl-menu__item">hello@example.com</li>
+          <li class="mdl-menu__item">info@example.com</li>
+          <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
+        </ul>
+      </div>
+    </header>
+    <nav class="demo-navigation mdl-navigation ">
+      <!--<a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>-->
+      <a id="persona" class="mdl-navigation__link" >
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>
+        Persona
+      </a>
+      <a id="item" class="mdl-navigation__link" [routerLink]="['/Item']">
+        <i class="mdl-color-text--blue-grey-400 material-icons">local_offer</i>
+        Ítem
+      </a>
+      <a id="kit"class=" kit mdl-navigation__link" [routerLink]=" ['/RepoBrowser/RepoList', {org: 'angular'}] ">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>
+        Kit
+      </a>
+      <div class="mdl-layout-spacer"></div>
+    </nav>
+  </div>
+  <main class="mdl-layout__content mdl-color--grey-100">
+    <!--aquí debería ir lo que se va a mostrar del contenido de cada opción-->
+    <router-outlet></router-outlet>
+  </main>
+</div>
 
-<main>
-	<router-outlet></router-outlet>
-</main>
-
-
-<footer>
-  © 2016
-</footer>
